--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- <link rel="shortcut icon" href="/gem-puzzle/assets/icons/favicon-rubiks-cube.png" type="image/x-icon"> -->
     <title>Gem Puzzle</title>
 </head>
 <body>
